[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-infra-test"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "prometheus-client>=0.20",
    "kuafu-llm-infra @ file:///Users/liruixin/private/code/kuafuai/kuafu-llm-infra",
]

[project.scripts]
llm-infra-test = "llm_infra_test.__main__:main"
